fix padding on mobile

--- a/qiwiStyle/QiwiStyle.css
+++ b/qiwiStyle/QiwiStyle.css
@@ -46,10 +46,6 @@
     background-color: #ff8c00;
 }
 
-.container .ng-isolate-scope {
-    padding: 0 16px;
-}
-
 .ottwl-header__block .logo .logo-image {
     margin: 0;
 }
